# typeric

./: README.md  pyproject.toml
tests/: test_result.py
