[project]
name = "typeric"
version = "0.1.3"
description = "Utility types for Python, such as `Result`, `Option`, etc."
readme = "README.md"
authors = [
    { name = "dfine", email = "coding@dfine.tech" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
typeric = "typeric:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools.package-data]
"typeric" = ["py.typed"]
